--- a/localisation/KR_News_l_english.yml
+++ b/localisation/KR_News_l_english.yml
@@ -135,7 +135,7 @@ worldnews.34.d:0 "The Commune of France is the world's leading Syndicalist natio
 worldnews.34.a:0 "Interesting."
 
 worldnews.35.t:0 "Anarchistes Elected in France"
-worldnews.35.d:0 "The Commune of France is the world's leading Syndicalist nation, united as a federation of city communes and directed by the Comité de Salut Public, the chief executive. Ever since its inception, however, the Second Commune was not uniform in its policy - numerous factions arose, each one with their own idea of which path France should take. As the time for revenge against Germany and the World Revolution closes in, the CGT election of 1936 is set to be very important... \n\nThe replacement for the disgraced Marceau Pivert arose from the Anarchists, a movement inspired by the Ukrainian revolutionary Nestor Makhno. The Anarchists now lead the CSP, and stand in favour of greater regional freedom and a drastic cut in the CSP's powers."
+worldnews.35.d:0 "The Commune of France is the world's leading Syndicalist nation, united as a federation of city communes and directed by the Comité de Salut Public, the chief executive. Ever since its inception, however, the Second Commune was not uniform in its policy - numerous factions arose, each one with their own idea of which path France should take. As the time for revenge against Germany and the World Revolution closes in, the CGT election of 1936 is set to be very important... \n\nThe replacement for the disgraced Marceau Pivert arose from the Anarchistes, a movement inspired by the Ukrainian revolutionary Nestor Makhno. The Anarchistes now lead the CSP, and stand in favour of greater regional freedom and a drastic cut in the CSP's powers."
 worldnews.35.a:0 "Interesting."
 
 worldnews.36.t:0 "Electoral Gridlock in France"
