more work on America and more work on Tech Sharing groups

--- a/localisation/KR_Canada_l_english.yml
+++ b/localisation/KR_Canada_l_english.yml
@@ -181,6 +181,8 @@ CAN_attack_DEN:0 "Canada declared war on Denmark"
 CAN_threaten_DEN:0 "Canada claims Danish overseas territory"
 
 ### Foci ###
+CAN_isac:0 "Create ISAC"
+CAN_isac_desc:0 "A number of university presidents and scientific leaders, meeting in Toronto, have called for the formation of a new organization to co-ordinate research work among the member states of the British Empire. The work of co-coordinating these links is to be carried out by an umbrella organization, the Imperial Scientific and Academic Council, or ISAC, headquartered in and primarily funded by Canada, with contributions from the rest of the Entente"
 CAN_works:0 "Public Works"
 CAN_works_desc:0 "New public works, infrastructure, and development projects will help relieve the worst of the depression and provide valuable experience and expertise for our nascent industry."
 CAN_cbc:0 "Found the CBC"
@@ -914,3 +916,12 @@ canada.661.t:0 "[From.GetName] Sues for Peace"
 canada.661.d:0 "Exhausted and unwilling to continue the fight to protect their island colonies, the [From.GetAdjective] government has sent an envoy asking for white peace. In exchange, we will gain their island holdings, no further questions asked."
 canada.661.a:0 "Yes, let's end this now"
 canada.661.b:0 "This war isn't over until we're marching on [From.Capital.GetName]!"
+canada.700.t:0 "Dominion of India and the Imperial Scientific and Academic Council"
+canada.700.d:0 "The government of Canada has formed the Imperial Scientific and Academic Council, to co-ordinate the research efforts of the member states of the British Empire.  Canada has generously offered to fund the main operations of the council, so the Delhi government only needs to fund the efforts of its own scientists and academics to participate.  Should our government join the ISAC?"
+canada.700.a:0 "Join the ISAC"
+canada.701.t:0 "Australasia and the Imperial Scientific and Academic Council"
+canada.701.d:0 "The government of Canada has formed the Imperial Scientific and Academic Council, to co-ordinate the research efforts of the member states of the British Empire.  Canada has generously offered to fund the main operations of the council, so the Australasian government only needs to fund the efforts of its own scientists and academics to participate.  Should our government join the ISAC?"
+canada.701.a:0 "Join the ISAC"
+canada.702.t:0 "The Caribbean Federation and the Imperial Scientific and Academic Council"
+canada.702.d:0 "The government of Canada has formed the Imperial Scientific and Academic Council, to co-ordinate the research efforts of the member states of the British Empire.  Canada has generously offered to fund the main operations of the council, so the Caribbean government only needs to fund the efforts of its own scientists and academics to participate.  Should our government join the ISAC?"
+canada.702.a:0 "Join the ISAC"
