--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -358,6 +358,8 @@ CSA_liberty_ships:0 "Liberty Ships"
 CSA_liberty_ships_desc:0 "The world shall see our ships coming to help fight for Syndicalism world wide."
 CSA_war_plan_black:0 "War Plan Black"
 CSA_war_plan_black_desc:0 "The time has come to strike down the great reactionary empire that is the Kaiserreich. No more shall the German empire keep the world in its chains. No more shall people wonder how long their capitalistic slavery shall continue. We shall fight! We shall break the chains of the Kaiserreich!"
+CSA_join_phalanstere:0 "Join the Phalanstere"
+CSA_join_phalanstere_desc:0 ""
 CSA_war_plan_red:0 "War Plan Red"
 CSA_war_plan_red_desc:0 "The British Royal family in Canada repersents one of the most dangerous enemies to the American people. We must begin planning on how to fight the Canadians and their Allies."
 CSA_great_northern_wall:0 "Great Northern Wall"
