--- a/localisation/KR_Pacific_States_of_America_l_english.yml
+++ b/localisation/KR_Pacific_States_of_America_l_english.yml
@@ -165,20 +165,26 @@ CAL_join_entente:0 "Join the Entente"
 CAL_join_entente_desc:0 ""
 CAL_canadian_freindship:0 "Canadian Friendship"
 CAL_canadian_freindship_desc:0 ""
-CAL_australasia_freindship:0 "Australasian friendship"
+CAL_australasia_freindship:0 "Entente Prosparity"
 CAL_australasia_freindship_desc:0 ""
+CAL_join_isac:0 "Join ISAC"
+CAL_join_isac_desc:0 ""
 CAL_join_mittle_europa:0 "Join Mitteleuropa"
 CAL_join_mittle_europa_desc:0 ""
 CAL_californian_aog_offices:0 "Open AOG offices"
 CAL_californian_aog_offices_desc:0 ""
 CAL_german_freindship:0 "German Friendship"
 CAL_german_freindship_desc:0 ""
+CAL_join_kaiser_society:0 "Join The Kaiser Willhelm Society"
+CAL_join_kaiser_society_desc:0 ""
 CAL_join_japan:0 "Join the Co-prosperity Sphere"
 CAL_join_japan_desc:0 ""
 CAL_japanese_freindship:0 "Japanese Friendship"
 CAL_japanese_freindship_desc:0 ""
 CAL_japanes_bussiness:0 "Japanese-Californian businesses"
 CAL_japanes_bussiness_desc:0 ""
+CAL_japanese_research_cooperation:0 "Join Rikagaku Kenkyusho"
+CAL_japanese_research_cooperation_desc:0 ""
 CAL_american_autonomy:0 "American Autonomy"
 CAL_american_autonomy_desc:0 ""
 
