--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -30,7 +30,7 @@ USA_president_long:0 "President Long"
 USA_president_long_desc:0 "Against all odds, Huey Long has been elected the 32nd President of the United States. The Southern Demagogue is feared by his opponents but beloved by the rural poor and a significant portion of the disillusioned former-progressives of the middle class. He promises the world to his followers and shows little regard for the Constitution, but that is apparently enough to win election."
 USA_long_farmer_relief:0 "Farmer Relief act"
 USA_long_farmer_relief_desc:0 "One of the first acts that Long wishes to push through Congress is a farmer relief bill that would help the farmers throughout the country. The Syndicalists throughout the country counter that this reform doesn't go far enough while conservatives counter it goes to far. Yet despite this, it seems to be rather popular throughout the country.	"
-USA_infastructure_building:0 "Long's Tariffs"
+USA_infastructure_building:0 "Long's Tarrifs"
 USA_infastructure_building_desc:0 ""
 USA_longs_tarrifs:0 "Coast to Coast Reforms"
 USA_longs_tarrifs_desc:0 ""
