Last one for tonight, I am starting to see code on the walls

--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -15,6 +15,7 @@ USA_cuban_invitation_tooltip:0 "Cuba lies within the American Pond of the Caribb
 USA_haitian_invitation_tooltip:0 "Haiti lies within the American Pond of the Caribbean. It is in our interests to make sure that Haiti remains friendly to the United States and our interests. "
 USA_dominican_invitation_tooltip:0 "The Dominican Republic lies within the American Pond of the Caribbean. It is in our interests to make sure that The Dominican Republic remains friendly to the United States and our interests."
 USA_peruvian_invitation_tooltip:0 "The government of Peru stands as a bulwark against syndicalism in the Andes. We should make sure that they remain friendly to American Businesses and of course the American government."
+
 ### National Focus - Presidents ###
 USA_1936_election:0 "The 1936 Election"
 USA_1936_election_desc:0 "The 1936 elections are the most ideological fraught elections in US history to date. Syndicalists and Nationalists, Republicans and Democrats all battle it out at the ballot box to see who will become the President of the United States of America. In the end though only one can be president."
@@ -25,12 +26,12 @@ USA_labor_relations_act_desc:0 "One of Reed's first acts as President is to push
 USA_workers_security:0 "Syndicalist Social Security"
 USA_workers_security_desc:0 "After the passage of the Labour-Relations Act in Congress, Jack Reed has set his sight on creating social security for all Americans. In contrast to the Labour-Relations Act, this has meet with criticism by even some of the progressive wings of the Democratic and Republican parties, still there is plenty of support for the Act that has already been dubbed, Syndicalist Social Security."
 USA_resource_nationalization:0 "Resource Nationalisation Act"
-USA_resource_nationalization_desc:0 "After the Passage of the Social Security Act, Reed has set his sight on nationalizing the resources of America for Americans. However the resources nationalisation act has already met with stiff resistance by some and out right hostility from others. Reed and the syndicalists are determined to push it through though..."
+USA_resource_nationalization_desc:0 "After the Passage of the Social Security Act, Reed has set his sight on nationalising the resources of America for Americans. However the resources nationalisation act has already met with stiff resistance by some and out right hostility from others. Reed and the syndicalists are determined to push it through though..."
 USA_president_long:0 "President Long"
 USA_president_long_desc:0 "Against all odds, Huey Long has been elected the 32nd President of the United States. The Southern Demagogue is feared by his opponents but beloved by the rural poor and a significant portion of the disillusioned former-progressives of the middle class. He promises the world to his followers and shows little regard for the Constitution, but that is apparently enough to win election."
 USA_long_farmer_relief:0 "Farmer Relief act"
 USA_long_farmer_relief_desc:0 "One of the first acts that Long wishes to push through Congress is a farmer relief bill that would help the farmers throughout the country. The Syndicalists throughout the country counter that this reform doesn't go far enough while conservatives counter it goes to far. Yet despite this, it seems to be rather popular throughout the country.	"
-USA_infastructure_building:0 "Long's Tarrifs"
+USA_infastructure_building:0 "Long's Tariffs"
 USA_infastructure_building_desc:0 ""
 USA_longs_tarrifs:0 "Coast to Coast Reforms"
 USA_longs_tarrifs_desc:0 ""
@@ -269,6 +270,7 @@ USA_agricultural_adjustment_act_desc:0 ""
 USA_social_security:0 "Pass Social Security"
 USA_social_security_desc:0 ""
 USA_economy_has_recovered:0 "The Economy Has Recovered"
+
 ### National Focus - Foreign Policy ###
 USA_foreign_policy:0 "Foreign Policy"
 USA_foreign_policy_desc:0 ""
@@ -817,9 +819,9 @@ ustates.60.e:0 "William Z. Foster, to create a disciplined army of labour"
 
 ustates.61.t:0 "Nationalise the Resource Industries"
 ustates.61.d:0 "One of his first acts as the new president was to nationalise the major industries. He believed that control over the resources of America would be the best way to combat some of the social injustice of the system."
-ustates.61.a:0 "Nationalize the resource industry first"
+ustates.61.a:0 "Nationalise the resource industry first"
 
-ustates.62.t:0 "Nationalising the Reource Industries"
+ustates.62.t:0 "Nationalising the Resource Industries"
 ustates.62.d:0 "Nationalising of all the resource industries in America was easier said than done. Reed was able to nationalise some of the industry, as the CSA and it's unions already controlled it, but others like the oil industry in California resisted."
 ustates.62.a:0 "All the industry must be controlled"
 ustates.62.b:0 "Leave the oil industry for now"
@@ -921,7 +923,7 @@ ustates.83.d:0 "The general strike by Reed had forced the federal government to 
 ustates.83.a:0 "Send in Long's workers"
 
 ustates.84.t:0 "Federal Workers Arrive"
-ustates.84.d:0 "When the federal workers arrived there was an immediate reaction from the CSA groups. As the CSA came out to protest the federal workers they were met by groups of America First thugs who were protecting the workers. The America First presence had threatened to destabilize the situation."
+ustates.84.d:0 "When the federal workers arrived there was an immediate reaction from the CSA groups. As the CSA came out to protest the federal workers they were met by groups of America First thugs who were protecting the workers. The America First presence had threatened to destabilise the situation."
 ustates.84.a:0 "Send in federal troops to protect the workers and remove the AUS thugs"
 ustates.84.b:0 "Send in federal troops and keep the sides apart"
 ustates.84.c:0 "Send in federal troops to protect the workers from the CSA"
@@ -944,7 +946,7 @@ ustates.88.d:0 "As the federal troops were withdrawing from Chicago, violence er
 ustates.88.a:0 "Damn Long"
 
 ustates.89.t:0 "Reed and the CSA Begin to Barricade Cities"
-ustates.89.d:0 "Reed feared that the newly independent American Union State would begin to systematically attempt to destroy the CSA and he was not convinced the us government had the conviction to stop Long and the AUS. Reed bagan barricading himself and the CSA in several cities."
+ustates.89.d:0 "Reed feared that the newly independent American Union State would begin to systematically attempt to destroy the CSA and he was not convinced the US government had the conviction to stop Long and the AUS. Reed began barricading himself and the CSA in several cities."
 ustates.89.a:0 "We need to calm this situation down"
 
 ustates.90.t:0 "Federal Troops Clash With CSA Strikers Chicago"
@@ -1014,7 +1016,7 @@ ustates.104.b:0 "Continue to negotiate for better terms."
 
 ustates.105.t:0 "America First Votes Down Reforms"
 ustates.105.d:0 "When Garner attempted to put through the reforms that Reed had proposed it was quickly voted down by America First congressmen loyal to Long. Long then declared that he would personally see that none of Reed's reforms would ever be put through."
-ustates.105.a:0 "Expell Long and his loyal men."
+ustates.105.a:0 "Expel Long and his loyal men."
 ustates.105.b:0 "Back down from the reforms."
 
 ustates.106.t:0 "America First Expelled From Washington"
@@ -1036,12 +1038,12 @@ ustates.109.a:0 "Those bastards."
 
 ustates.110.t:0 "Garner Drops Reforms"
 ustates.110.d:0 "Fearing the backlash of attempting to push through the reforms, Garner dropped the reforms Reed had put to him. Reed denounced Garner as being weak and a puppet of Long. He returned to Chicago unhappy."
-ustates.110.a:0 "Expell Long and his loyal men to appease Reed."
+ustates.110.a:0 "Expel Long and his loyal men to appease Reed."
 ustates.110.b:0 "No more games with Reed. Demand he end the strike."
 
 ustates.111.t:0 "Garner Expels Long From Washington"
 ustates.111.d:0 "In an attempt to bring Reed back to the negotiation table Garner expelled Huey Long from Washington. It did help the situation with Reed but at the cost of the America First support. Reed returned but to a Washington in chaos."
-ustates.111.a:0 "We atleast have Reed back at the table."
+ustates.111.a:0 "We at least have Reed back at the table."
 
 ustates.112.t:0 "America First Men Attack Reed in Washington."
 ustates.112.d:0 "Men loyal to the America First attacked Reed and his detail by throwing bombs at his car. Reed was able to escape but two of his men were killed. The CSA immediately retaliated by attacking America First members throughout the country."
@@ -1647,7 +1649,7 @@ ustates.285.a:0 "Demand immediate reincorporation of PSA!"
 ustates.285.b:0 "Leave it as it is"
 
 ustates.286.t:0 "Our independence is in danger!"
-ustates.286.d:0 "The USA threatens us with a declaration of war if we don´t accept our reintegration into the United states. Are we ready to die defending our freedom or we will submit in hope of sparing our people the horrors of war?"
+ustates.286.d:0 "The USA threatens us with a declaration of war if we don't accept our reintegration into the United states. Are we ready to die defending our freedom or we will submit in hope of sparing our people the horrors of war?"
 ustates.286.a:0 "We will defend our freedom!"
 ustates.286.b:0 "Accept USA demands.."
 
@@ -1730,15 +1732,15 @@ ustates.325.d:0 "...Nobody sees this..."
 ustates.325.a:0 "A new beginning"
 
 ustates.400.t:0 "Black Monday hits America!"
-ustates.400.d:0 "Despite the political turmoil going on throughout the Country, it looked like the economy of the United States might be finally be recovering after the Wall Street Crash in 1925. However today devestating Berlin Crash has finally hit America and sent our economy into a downward spiral, yet again. Reed and Long have come out railing against the corrupt bankers who let the crash happen. Curtis and Garner have both pledged to fix the economy should the win the Election."
+ustates.400.d:0 "Despite the political turmoil going on throughout the Country, it looked like the economy of the United States might be finally be recovering after the Wall Street Crash in 1925. However today devastating Berlin Crash has finally hit America and sent our economy into a downward spiral, yet again. Reed and Long have come out railing against the corrupt bankers who let the crash happen. Curtis and Garner have both pledged to fix the economy should the win the Election."
 ustates.400.a:0 "This is just not our Year."
 
 ustates.401.t:0 "The Trial of Sacco and Vanzetti"
 ustates.401.d:0 "Two immigrants from Italy, Sacco and Vanzetti, have been accused of killing a guard and paymaster of a local bank in Braintree Massachusetts, a town outside of Boston. The case has quickly became the trial of the century, for Sacco and Vanzetti are anarchists. Unsurprisingly the CSA has come out strongly in favor of the two men while the American First has come out against them. How ever the case goes it looks like it will anger plenty of people."
 ustates.401.a:0 "Sacco and Vanzetti are innocent"
-ustates.401.b:0 "Sacco and Vanzetti are guility"
+ustates.401.b:0 "Sacco and Vanzetti are guilty"
 
-#########Intervention Events####
+### Intervention Events ###
 ustates.600.t:0 "League of Nations invite?"
 ustates.600.d:0 "Our friends in the United States have sent us an invite to join their League of Nations. Doing so would obviously tie us to the fortunes of the United States. Some in our government think just being friends with them will be the more pragmatic choice, others say accepting the invitation is better for it will help keep godless syndicalism from coming to Cuba's shores."
 ustates.600.a:0 "Send the Invite!"
