Forgot to commit

--- a/localisation/KR_Pacific_States_of_America_l_english.yml
+++ b/localisation/KR_Pacific_States_of_America_l_english.yml
@@ -165,7 +165,7 @@ CAL_join_entente:0 "Join the Entente"
 CAL_join_entente_desc:0 ""
 CAL_canadian_freindship:0 "Canadian Friendship"
 CAL_canadian_freindship_desc:0 ""
-CAL_australasia_freindship:0 "Entente Prosparity"
+CAL_australasia_freindship:0 "Entente Prosperity"
 CAL_australasia_freindship_desc:0 ""
 CAL_join_isac:0 "Join ISAC"
 CAL_join_isac_desc:0 ""
@@ -491,7 +491,7 @@ pacificstates.52.c:0 "Just guarantee their independence"
 pacificstates.53.t:0 "PSA wants to join Entente"
 pacificstates.53.d:0 "The Pacific States of America expressed their desire to become a member of our alliance. How shall we react?"
 pacificstates.53.a:0 "Welcome"
-pacificstates.53.b:0 "We don´t need them"
+pacificstates.53.b:0 "We don't need them"
 pacificstates.57.t:0 "The Treaty of Sacramento"
 pacificstates.57.d:0 "We've been beaten by the armed forces of the Pacific States. How did this happen? They've seized the whole Rocky Mountains region!"
 pacificstates.57.a:0 "Offer peace treaty, recognise Californian territorial gains"
