3 events about Central Asian Muslims for Russian after annexation of Central Asia

--- a/localisation/KR_Russia_Foreign_l_english.yml
+++ b/localisation/KR_Russia_Foreign_l_english.yml
@@ -2116,3 +2116,16 @@ rusfor.1272.t:0 "White Ruthenia is alone!"
 rusfor.1272.d:0 "The German government doesn't want to protect White Ruthenia. But White Ruthenia isn't going to sell us their state bonds. Maybe we should take back our lands, using our army?"
 rusfor.1272.a:0 "Let's do it!"
 rusfor.1272.b:0 "We don't need White Ruthenia."
+
+rusfor.1273.t:0 "Spiritual Administration of the Muslims of Central Asia."
+rusfor.1273.d:0 "After the annexation of Central Asia, we got many new Muslim citizens, who were ruled before by the local obscurantist priests and preachers. It is obvious, that we have to do something with their legacy and turn our new citizens into loyal and peaceful members of the Russian society. Now we have two propositions - we can establish a special Spiritual Administration of the Muslims of Central Asia or give an additional powers to the Orenburg Muslim Spiritual Assembly, which is controlled by the loyal Tatars and Bashkirs."
+rusfor.1273.a:0 "Create a new Spiritual Administration."
+rusfor.1273.b:0 "Orenburg Assembly will deal with it!"
+
+rusfor.1274.t:0 "Problems in Central Asia."
+rusfor.1274.d:0 "Though we have established a new Spiritual Administration of the Muslims of Central Asia, but it is still controlled mainly by the same priests, who had been playing a significant role in Central Asia since the Civil war till the annexation. Of course we will have to change the situation here, but it will take us a lot of time."
+rusfor.1274.a:0 "Oh well"
+
+rusfor.1275.t:0 "Pacification of Central Asia."
+rusfor.1275.d:0 "Good news from Central Asia - new Tatar and Bashkir Muslim leadership could finally reorganize the system of the local Islamic institutions and partly defeat the obscurantism of the local notable theologists and preachers. Now Orenburg Muslim Spiritual Assembly proposes a new vision of Islam for the Central Asian citizens, which means, that Cental Asia will be loyal enough to us and we will be able to pay less attention to this region of Russia."
+rusfor.1275.a:0 "That's great!"
