more work on america plus creation of the hawaii event file

--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -32,3 +32,81 @@ HAWENTYES:0 "Hawaii joins the Entente"
 HAWENTNO:0 "Hawaii don't join the Entente"
 ARRCSAAGG:0 "Arrested our men"
 CSADEMREF:0 "CSA demands reforms"
+
+### Event Text ###
+hawaii.1.t:0 "The Territory of Hawaii Revolts"
+hawaii.1.d:0 "After the secession of the California Republic, the Hawaiian Territory, gained in 1893 after the treasonous Queen Liliuokalani was deposed by American Forces, has been lost. The Militia of Molokai, a pro-Hawaiian sovereignty group took up arms last week and rallied the natives to their cause. The last military base was taken today, and we have lost control of the island and possibly of all of our Pacific holdings."
+hawaii.1.a:0 "We should have expected this..."
+hawaii.1.b:0 "We should have expected this... (Play Hawaii)"
+hawaii.2.t:0 "The Hawaiian Government"
+hawaii.2.d:0 "We have finally achieved freedom!"
+hawaii.2.a:0 "Henry Alexander Baldwin will guide our nation!"
+hawaii.3.t:0 "Occupation of Pacific Islands"
+hawaii.3.d:0 "The United States has fallen into war and in response the islands in the Pacific have joined Hawaii. Wake, Midway and the South Pacific islands have joined Hawaii."
+hawaii.3.a:0 "Excellent"
+hawaii.4.t:0 "Hawaii Occupies Midway, Wake and Other Pacific Islands"
+hawaii.4.d:0 "The garrisons on Wake and Midway have joined Hawaii to ensure that they are not occupied by another power. There is unfortunately nothing the US can do about it."
+hawaii.4.a:0 "Damn"
+hawaii.5.t:0 "The Future of Hawaii"
+hawaii.5.d:0 "The American civil war has concluded and the United States no longer exists. It is clear that Hawaii must make a decision about the future. The Pacific States of America are willing to abide by any decision that Hawaii makes about its future."
+hawaii.5.a:0 "Hawaii will remain independent"
+hawaii.5.b:0 "Propose an alliance with the PSA"
+hawaii.5.c:0 "We should join the PSA"
+hawaii.6.t:0 "Hawaii Proposes an Alliance"
+hawaii.6.d:0 "The Hawaii government had proposed an alliance between the two states. An advantageous situation for sure but some in the PSA government were worried about how other governments would react to this decision."
+hawaii.6.a:0 "Welcome"
+hawaii.6.b:0 "No thanks"
+hawaii.7.t:0 "Hawaii Joins the PSA"
+hawaii.7.d:0 "The government in Hawaii has decided to join the Pacific States of America"
+hawaii.7.a:0 "Welcome to the PSA"
+hawaii.8.t:0 "Petitioning the Entente"
+hawaii.8.d:0 "The defeat of the Pacific States of America and United States of America at the hands of the CSA had left the islands of Hawaii with no allies and an uncertain future. The Entente appeared to be the natural choice to ally with against the CSA but people in Hawaii were worried that this could draw the islands into a war. Opinion was split on the islands."
+hawaii.8.a:0 "Send the request"
+hawaii.8.b:0 "We will stay on our own"
+hawaii.9.t:0 "Hawaii Requests Entry into the Entente"
+hawaii.9.d:0 "Hawaii has requested entry into the Entente. The strategic position of Hawaii makes them a valuable member for the Entente. There was concern that if Hawaii was added to the Entente, it would change the balance of power in the Pacific."
+hawaii.9.a:0 "A welcome addition"
+hawaii.9.b:0 "We should avoid a provocative move"
+hawaii.10.t:0 "Hawaii Joins the Entente"
+hawaii.10.d:0 "The Entente has accepted our petition for entry. Hawaii may just be able to survive with some strong allies."
+hawaii.10.a:0 "A welcome addition"
+hawaii.11.t:0 "The Entente Refuses Hawaii"
+hawaii.11.d:0 "The Entente has refused our request for an alliance, Hawaii will stand alone."
+hawaii.11.a:0 "Damn"
+hawaii.12.t:0 "Expansion of Hawaii's Industry"
+hawaii.12.d:0 "The usual distribution of Hawaii's pineapples had been disrupted due to the American Civil War but the demand for them had not. Dole had emphasized the need to strengthen Hawaii's economy and expand it's industry. The pineapple companies of the islands began increasing production and building more facilities for the increased production."
+hawaii.12.a:0 "Behold our pineapples!"
+hawaii.13.t:0 "Resource Expansion"
+hawaii.13.d:0 "The necessity for Hawaii to expand it's resources as well as its industry has prompted a scouring of the islands for any natural resources that could be found."
+hawaii.13.a:0 "More fuel for the pineapple factories!"
+hawaii.14.t:0 "Island Agitators"
+hawaii.14.d:0 "The CSA's extensive network of spies had led to their learning of the labour issues that were cropping up on the islands in Hawaii. The islands were not part of the CSA's overall strategy but the plight of the workers was in the best interest of the CSA and if it happened to ensure the Hawaii islands came under the control of the CSA then so be it."
+hawaii.14.a:0 "Send in some men to support the workers."
+hawaii.14.b:0 "Forget Hawaii. We need to finish America."
+hawaii.15.t:0 "The Red Pineapple Riot"
+hawaii.15.d:0 "The arrival of CSA agitators had enticed the workers of Hawaii into a near frenzy. Protests were launched across the islands. When the police attempted to control the protest they were pelted with pineapples that had been painted red. Several policemen were injured and the crowd effectively dispersed but the riot had seriously shaken the local authorities."
+hawaii.15.a:0 "We must reform."
+hawaii.15.b:0 "Arresting the CSA agitators should do it."
+hawaii.16.t:0 "Trade Union of Hawaii"
+hawaii.16.d:0 "The Trade Union of Hawaii had been slowly gaining power since the Hawaiian government had instituted reforms. The CSA government was divided as to whether this was enough or not. Many believed that the islands should be forced to adopt the ideals of the CSA but there are many who see the islands as making a natural progression to Syndicalism."
+hawaii.16.a:0 "Demand Hawaii reforms"
+hawaii.16.b:0 "Let their revolution evolve"
+hawaii.17.t:0 "Trade Union of Hawaii"
+hawaii.17.d:0 "Since the reforms on the island the trade unionists have been gaining more and more power. The CSA had been assisting in the organization of the unions and had been pressuring the Hawaii government for more reforms. The reforms that were proposed would make the islands a virtual puppet of the CSA and are seen by some as just one step to annexation by the CSA. While many were resistant to both ideas, many more saw that they had little choice in the matter"
+hawaii.17.a:0 "Bow to the CSA reforms"
+hawaii.17.b:0 "We can not fight fate, let us rejoin America."
+hawaii.17.c:0 "We will never submit to the CSA"
+hawaii.18.t:0 "Hawaii Becomes a CSA Protectorate"
+hawaii.18.d:0 "Hawaii has allowed the CSA government control of its policies to ensure the fair treatment of the workers there. CSA officials are already on their way to the island to take control of the government."
+hawaii.18.a:0 "Forward the revolution!"
+hawaii.19.t:0 "Hawaii joins America"
+hawaii.19.d:0 "Facing constant pressure by the CSA agents in Hawaii, the government of Hawaii has sent a proposal to the mainland seeking to join the CSA. We should accept the proposal and bring our comrades back into our fold once more. Long live the Hawaiian Workers!"
+hawaii.19.a:0 "We welcome our Hawaiian comrades!"
+hawaii.20.t:0 "Hawaii Refuses CSA Help"
+hawaii.20.d:0 "The islands of Hawaii have refused to allow the CSA to mediate the labour issues on the island. They have refused to listen to the issues of the workers and have threatened the CSA representatives that have been sent there. The people are crying out for the government to take action to support the workers in Hawaii but some are also sceptical about how well the government could persecute a war against such a distant target."
+hawaii.20.a:0 "War for the workers!"
+hawaii.20.b:0 "Peace will work better"
+hawaii.21.t:0 "The rise of Native Nationalism"
+hawaii.21.d:0 "With our nation having been free for some time now, the natives have organised a movement for the restoration of the Hawaiian monarchy. While this would normally be a source of great concern, considering the deposed family has married into the industrial families, a restoration would be benefical... The current pretender to the throne, Edward D. Kawananakoa, would be easy to control. A monarchy would expand our nation's cultural independence, and give the populace a figurehead..."
+hawaii.21.a:0 "Restore the monarchy!"
+
