--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -447,6 +447,11 @@ USA_safety_reforms:0 "Saftey Reforms"
 USA_work_projects:0 "Public Work Projects"
 USA_mine_bureau:0 "Mine Bureau"
 USA_agriculture_improvements:0 "Agricultural Improvements"
+USA_liberty_ship:0 "Liberty Ships"
+USA_democracy_arsenal:0 "Arsenal of Democracy"
+
+
+
 ### Parties ###
 USA_totalist_party:0 "ACP"
 USA_totalist_party_long:0 "American Communist Party"
@@ -1570,26 +1575,6 @@ ustates.266.d:0 "We should rethink Latin American policy as the most horrible co
 ustates.266.a:0 "Uncle Sam comes back to action!"
 ustates.266.b:0 "Still not an option"
 
-ustates.267.t:0 "The Platean War - Our Involvement?"
-ustates.267.d:0 "The outbreak of Second South American War surprised US public opinion and government. We were too focused on absurd quarrels between our politicians that we haven't done anything to prevent new war conflict between La-Plata and Brazil. We need to decide which side of conflict shall we support and if it is necessary to become involved at all..."
-ustates.267.a:0 "Democracies should help each other"
-ustates.267.b:0 "Declare neutrality"
-ustates.268.a:0 "Better Integralist Brazil than La Plata"
-ustates.269.a:0 "Better La Plata than syndicalism"
-
-ustates.270.t:0 "Help from United States!"
-ustates.270.d:0 "The United States decided to send us weapons and soldiers to contain aggressive La Platean regime. Now we can't lose this war."
-ustates.270.a:0 "It's good to have such ally"
-
-ustates.271.t:0 "Help from United States!"
-ustates.271.d:0 "The United States decided to send us weapons and soldiers to contain aggressive La Platean regime. Now we can't lose this war."
-ustates.271.a:0 "It's good to have such ally"
-
-ustates.272.t:0 "The End of the Platean War"
-ustates.272.d:0 "For good or ill, the Platean War is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
-ustates.272.a:0 "Great!"
-
-
 ustates.273.t:0 "League of Nations invite?"
 ustates.273.d:0 "Our friends in the United States have sent us an invite to join their League of Nations. Doing so would obviously tie us to the fortunes of the United States. Some in our government think just being friends with them will be the more pragmatic choice, others say accepting the invitation is better for it will help us destroy the godless syndicalists in Centroameria"
 ustates.273.a:0 "Send the Invite!"
@@ -1845,3 +1830,45 @@ ustates.623.a:0 "Of Course we accept!"
 ustates.624.t:0 "Friendly Peru"
 ustates.624.d:0 "Not surprisingly Peru has accepted our offer to protect them in exchange for keeping relations good for American Businesses."
 ustates.624.a:0 "Pleasure doing Business"
+
+ustates.625.t:0 "League of Nations invite?"
+ustates.625.d:0 "Our friends in the United States have sent us an invite to join their League of Nations. Doing so would obviously tie us to the fortunes of the United States. Some in our government think just being friends with them will be the more pragmatic choice, others say accepting the invitation is better for keeping syndicalism from returning to Brazil."
+ustates.625.a:0 "Send the Invite!"
+ustates.625.b:0 "Lets Just be Friends"
+
+ustates.626.t:0 "Brazil in the League of Nations"
+ustates.626.d:0 "Brazil has decided to accept our invitation into the League of Nations. With our aid Syndicalism shall never come to Brazil and American Businesses shall be kept profitable and happy. "
+ustates.626.a:0 "Welcome Friends!"
+
+ustates.627.t:0 "Friendly Brazil"
+ustates.627.d:0 "The government of Brazil has rejected our invitation to the League of Nations for some reason, however they do still wish to be friends and have agreed to keep Brazil friendly to American business."
+ustates.627.a:0 "It is better then nothing"
+
+ustates.628.t:0 "An Offer from the United States"
+ustates.628.d:0 "The United States has sent us an offer to protect us in exchange of keeping our government friendly to American Businesses. This should be of great help to keep Brazil free from the scourge of godless Syndicalism."
+ustates.628.a:0 "Of Course we accept!"
+
+ustates.629.t:0 "Friendly Brazil"
+ustates.629.d:0 "Not surprisingly Brazil has accepted our offer to protect them in exchange for keeping relations good for American Businesses."
+ustates.629.a:0 "Pleasure doing Business"
+
+ustates.630.t:0 "League of Nations invite?"
+ustates.630.d:0 "Our friends in the United States have sent us an invite to join their League of Nations. Doing so would obviously tie us to the fortunes of the United States. Some in our government think just being friends with them will be the more pragmatic choice, others say accepting the invitation is better for keeping syndicalism from returning to Brazil."
+ustates.630.a:0 "Send the Invite!"
+ustates.630.b:0 "Lets Just be Friends"
+
+ustates.631.t:0 "Brazil in the League of Nations"
+ustates.631.d:0 "Brazil has decided to accept our invitation into the League of Nations. With our aid Syndicalism shall never come to Brazil and American Businesses shall be kept profitable and happy. "
+ustates.631.a:0 "Welcome Friends!"
+
+ustates.632.t:0 "Friendly Brazil"
+ustates.632.d:0 "The government of Brazil has rejected our invitation to the League of Nations for some reason, however they do still wish to be friends and have agreed to keep Brazil friendly to American business."
+ustates.632.a:0 "It is better then nothing"
+
+ustates.633.t:0 "An Offer from the United States"
+ustates.633.d:0 "The United States has sent us an offer to protect us in exchange of keeping our government friendly to American Businesses. This should be of great help to keep Brazil free from the scourge of godless Syndicalism."
+ustates.633.a:0 "Of Course we accept!"
+
+ustates.634.t:0 "Friendly Brazil"
+ustates.634.d:0 "Not surprisingly Brazil has accepted our offer to protect them in exchange for keeping relations good for American Businesses."
+ustates.634.a:0 "Pleasure doing Business"
